<resources>
    <string name="app_name">Place2Be</string>
    <string name="main_map_ID">c8d507c5d96213f7</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_location_tracker">LocationTracker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="add_wristband">Add Wristband</string>
    <string name="messages">Messages</string>
    <string name="others">Others</string>
    <string name="customer_support">Customer Support</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="add_group">Add Group</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_group_marker">Add group marker?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="email">EMAIL</string>
    <string name="place2be">Place2Be</string>
    <string name="password">Password</string>
</resources>