<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">

        <menu>

            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile"/>
            <item
                android:id="@+id/menu_map"
                android:icon="@drawable/map"
                android:title="@string/map"/>

            <item
                android:id="@+id/menu_messages"
                android:icon="@drawable/messages"
                android:title="@string/messages"/>

            <item
                android:id="@+id/menu_add_wristband"
                android:icon="@drawable/add_wristband"
                android:title="@string/add_wristband"/>

        </menu>

    </item>

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menu_customer_support"
                android:icon="@drawable/customer_support"
                android:title="@string/customer_support"/>

            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>